2010-08-11  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed an issue where trading an item and gold in exchange for a different item was not considering the gold in the price of the new item.
- Fixed a bug where postage was being counted more than once if you send mail and then open mail in the same session.
- Added a warning when sending items with value to characters on other accounts.
- Added '/ia snatch'. This new command works with your queue (/ia crafting) to replace your snatch list with the materials you need for crafting. NOTE: Auctioneer requires visiting the AH before you can modify the snatch list.
- Fixed Enchanting. I was not getting the ItemID correctly, so enchants could not be mapped to the scrolls they were to created
- Changed snatch to only add each item once and to only add a snatch for items you don't have
- API: Added haveMaterials to the item and need to the reagents that get passed to queue destinations. This is in preparation for building a shopping list module.
- API: Added a way for other addons to register with ItemAuditor once it loads if they were loaded first and updated the example at the end of Api.lua.

2010-08-10  Asa Ayers  <Asa.Ayers@Gmail.com>

- Changed the ArkInventory rule to consider items with no competition to be profitable.
- Ticket 27 - Added the ability to select your preferred auction adodn if multiple are available.
- Added options when using Auctioneer to use the market price instead of the lowest price on the AH.

2010-08-08  Asa Ayers  <Asa.Ayers@Gmail.com>

- Removed some debugging code and added some code to prevent ItemAuditor from crashing if debug code gets released.

2010-08-07  Asa Ayers  <Asa.Ayers@Gmail.com>

- Removed references to Skillet in core functionality. Skillet really should be optional.

2010-08-03  Asa Ayers  <Asa.Ayers@Gmail.com>

- Fixed a bug introduced last night where in some cases there was an error caused by DataStore:GetAuctionHouseItemCount returning nil instead of 0 as I expected.
