@@ -1,3 +1,7 @@
+2010-08-12  Asa Ayers  <Asa.Ayers@Gmail.com>
+
+- API: added IAapi.GetItemCost
+
 2010-08-11  Asa Ayers  <Asa.Ayers@Gmail.com>
 
 - Fixed an issue where trading an item and gold in exchange for a different item was not considering the gold in the price of the new item.
